# pyPSQC

./: README.md  setup.cfg
src/pyPSQC/: MANIFEST.in  __init__.py  feature_extraction.py  model_coef.json  prepare_data.py  psqc.py  quality_prediction.py  utils.py
src/pyPSQC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
