[metadata]
name = pyPSQC
version = 1.0.0
author = Mohammed R. S. Sunoqrot
author_email = mohammed.sunoqrot@ntnu.no
description = Python pakage for the quality control system for automated prostate segmentation on T2-weighted MRI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohammedSunoqrot/pyPSQC
project_urls =
    Bug Tracker = https://github.com/MohammedSunoqrot/pyPSQC/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    pyAutoRef
    pyradiomics==3.0.1

[options.packages.find]
where = src

[options.package_data]
pyPSQC = model_coef.json